infra/k8s/prod/externalnames.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-db # name order-service connects to
  namespace: prod
spec:
  type: ExternalName
  externalName: orders-db.data.svc.cluster.local # RDS endpoint, e.g. orders.abc123.us-east-1.rds.amazonaws.com

---

apiVersion: v1
kind: Service
metadata:
  name: notification-db
  namespace: prod
spec:
  type: ExternalName
  externalName: notifications-db.data.svc.cluster.local

---

apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: prod
spec:
  type: ExternalName
  externalName: rabbitmq.data.svc.cluster.local
